# ChangeLog for dev-util/git
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.322 2009/03/06 07:23:30 fauli Exp $

  06 Mar 2009; Christian Faulhammer <fauli@gentoo.org> git-1.6.2.ebuild:
  fix HOMEPAGE

*git-1.6.2 (06 Mar 2009)

  06 Mar 2009; Robin H. Johnson <robbat2@gentoo.org>
  +files/20090305-git-1.6.2-noperl.patch, +git-1.6.2.ebuild:
  Version bump per bug #261241. Also fix bugs #256964, #238586. EAPI2 now in
  use.

*git-1.6.1.3 (11 Feb 2009)

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.1.3.ebuild:
  Version bump.

*git-1.6.1.2 (02 Feb 2009)

  02 Feb 2009; Greg Kroah-Hartman <gregkh@gentoo.org> +git-1.6.1.2.ebuild:
  version bump to 1.6.1.2 to fix pack-objects problem in 1.6.1.1

*git-1.6.1.1 (26 Jan 2009)

  26 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +files/20090126-git-1.6.1.1-noperl.patch, +git-1.6.1.1.ebuild:
  Version bump. Also bug #254029 - fix noperl patch.

  08 Jan 2009; Brent Baude <ranger@gentoo.org> git-1.6.0.6.ebuild:
  Marking git-1.6.0.6 ppc64 for bug 251343

*git-1.6.1 (06 Jan 2009)

  06 Jan 2009; Robin H. Johnson <robbat2@gentoo.org> +git-1.6.1.ebuild:
  Version bump, bug 250321.

  01 Jan 2009; Raúl Porcel <armin76@gentoo.org> git-1.6.0.6.ebuild:
  s390/sh stable wrt #251343

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> git-1.6.0.6.ebuild:
  ppc stable, bug #251343

  25 Dec 2008; Jeroen Roovers <jer@gentoo.org> git-1.6.0.6.ebuild:
  Stable for HPPA (bug #251343).

  23 Dec 2008; Raúl Porcel <armin76@gentoo.org> git-1.6.0.6.ebuild:
  alpha/arm/ia64 stable wrt #251343

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> git-1.6.0.6.ebuild:
  Factor out the long emake invocation so that we can consistently call it
  and avoid triggering a rebuild during install or test.

  23 Dec 2008; Markus Meier <maekke@gentoo.org> git-1.6.0.6.ebuild:
  amd64/x86 stable, bug #251343
