@@ -62,5 +62,5 @@ EBUILD git-1.6.1.2.ebuild 9845 RMD160 38ef2aa4cd03e0158c58a6b64e5b9de03cf76645 S
 EBUILD git-1.6.1.3.ebuild 9846 RMD160 acdbf8b449394ee0532c1784a036c09a01b2afe5 SHA1 5014a1b7a2ff7fcb011a2c59d513e0297ecbd1fa SHA256 36d34c803663a23cf182902cac5f24a0e59dce43cf72d120d7f93cd49ff40984
 EBUILD git-1.6.1.ebuild 9898 RMD160 768ec8e15030c5b6eb4198b47725d6cb737489c0 SHA1 73c3bac1b8b92a52b51fb4acb413c639a261149f SHA256 e0d38154746330f5607228f0e803bef1f7ea16801b3e1b388eeb6c016c082514
 EBUILD git-1.6.2.ebuild 9696 RMD160 fa7ac0aaae8e884b14fc4af9f753d07edc033306 SHA1 b1cc9cec6356940e06d737412486c9d76218c64b SHA256 215058f7a9ae88c6f48b4ca77a1168d9647da7688035b838c6c1fad04c9ea328
-MISC ChangeLog 48457 RMD160 512e9c27cdf5dc57e62d45b6fe1f7e1f96d46a0b SHA1 73d0c094c233348953d8b155daa0cd0713eea182 SHA256 d1dcb6ececfe9fce75ff9ed37af3a230821696322a0a2a15ca0f7af72851575f
-MISC metadata.xml 1539 RMD160 b8c0182e6c64bf0399c979942ec403c309a95019 SHA1 e3fbe7df1c4a5209d10ae82d7aa368df6bbf8a9e SHA256 9b0b2c3e7607e1e280edd997169c72799f37c7cac547bce3e294584eaabbb3e5
+MISC ChangeLog 48602 RMD160 b8f33a9cea7d00cc02c7ab92ca22026675685794 SHA1 ce29c1d279a931c727b0dc668f4adbc34cb1106e SHA256 7be5722778895f50cda5549d7ab9c8ccdf0c2b06e7510c96184ae4f1c263f616
+MISC metadata.xml 1517 RMD160 b0c955231b9507fdce4d8f7890389944cd2bfda2 SHA1 67e0083a14f2ad62981a47968405657e89cfa598 SHA256 1bdceffbc20918efe623b25ec5f047ed8ddcf071187ec718162af6d48dd1caf2
