@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-	<email>ferdy@gentoo.org</email>
-	<name>Fernando J. Pereda</name>
-</maintainer>
-<maintainer>
-	<email>robbat2@gentoo.org</email>
-	<name>Robin H. Johnson</name>
-	<description>Backup maintainer</description>
-</maintainer>
-<longdescription lang="en">
-	Git - Fast Version Control System. Official titled
-	"GIT - the stupid content tracker". 
+  <herd>no-herd</herd>
+  <maintainer>
+    <email>robbat2@gentoo.org</email>
+    <name>Robin H. Johnson</name>
+    <description>Backup maintainer</description>
+  </maintainer>
+  <longdescription lang="en">
+    Git - Fast Version Control System. Official titled
+    "GIT - the stupid content tracker". 
 
-	Git is a popular version control system designed to handle very large
-	projects with speed and efficiency; it is used mainly for various open
-	source projects, most notably the Linux kernel.
+    Git is a popular version control system designed to handle very large
+    projects with speed and efficiency; it is used mainly for various open
+    source projects, most notably the Linux kernel.
 
-	Git falls in the category of distributed source code management tools,
-	similar to e.g. GNU Arch or Monotone (or BitKeeper in the proprietary
-	world). Every Git working directory is a full-fledged repository with full
-	revision tracking capabilities, not dependent on network access or a central
-	server.
-</longdescription>
-<use>
-	<flag name="cgi">Install gitweb too</flag>
-	<flag name="mozsha1">Makes git use an optimized SHA1 routine from Mozilla that should be fast on non-x86 machines.</flag>
-	<flag name="ppcsha1">Make use of a bundled routine that is optimized for the PPC arch.</flag>
-	<flag name="webdav">Adds support for push'ing to HTTP repositories via DAV.</flag>
-	<flag name="gtk">Include the gitview contrib tool.</flag>
-	<flag name="subversion">Include git-svn for <pkg>dev-util/subversion</pkg> support.</flag>
-</use>
+    Git falls in the category of distributed source code management tools,
+    similar to e.g. GNU Arch or Monotone (or BitKeeper in the proprietary
+    world). Every Git working directory is a full-fledged repository with full
+    revision tracking capabilities, not dependent on network access or a central
+    server.
+  </longdescription>
+  <use>
+    <flag name="cgi">Install gitweb too</flag>
+    <flag name="mozsha1">Makes git use an optimized SHA1 routine from Mozilla that should be fast on non-x86 machines.</flag>
+    <flag name="ppcsha1">Make use of a bundled routine that is optimized for the PPC arch.</flag>
+    <flag name="webdav">Adds support for push'ing to HTTP repositories via DAV.</flag>
+    <flag name="gtk">Include the gitview contrib tool.</flag>
+    <flag name="subversion">Include git-svn for <pkg>dev-util/subversion</pkg> support.</flag>
+  </use>
 </pkgmetadata>
